--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,16 +34,18 @@
         </section>
         <section id="about-section">
             <h1 class="section-heading">About me</h1>
-            <div class="about-container">
-                <div class="message my-image">
-                    <img src="https://cdn.pixabay.com/photo/2016/09/08/04/12/programmer-1653351_1280.png" alt="">
-                </div>
-                <div class="message my-information">
-                    <p>I am Mateusz.</p>
-                    <p>I am programmer and tech enthusiast</p>
-                    <p>I started learning programming two years ago. Currently I'm studying Computer Science (field: programming) going to be on 5th semester. 
-                        I am interested in web development using Spring. At the same time I'm learning programming on my own from technical books and the internet.</p>
-
+            <div class="about-container container-fluid">
+                <div class="row">
+                    <div class="message my-image col-sm-4">
+                        <img src="https://cdn.pixabay.com/photo/2016/09/08/04/12/programmer-1653351_1280.png" alt="">
+                    </div>
+                    <div class="message my-information col-sm-4">
+                        <p>I am Mateusz.</p>
+                        <p>I am programmer and tech enthusiast</p>
+                        <p>I started learning programming two years ago. Currently I'm studying Computer Science (field: programming) going to be on 5th semester. 
+                            I am interested in web development using Spring. At the same time I'm learning programming on my own from technical books and the internet.</p>
+    
+                    </div>
                 </div>
             </div>
         </section>
@@ -94,13 +97,13 @@
                     <p><i class="fab fa-react fa-3x"></i></p>
                     <p class="skill-name">React</p>
                     <p><progress value="50" max="100"></progress></p>
-                </div>
+                </div>-->
                 <div class="skill-information">
                     <p><i class="fab fa-bootstrap fa-3x"></i></p>
                     <p class="skill-name">Bootstrap</p>
                     <p><progress value="45" max="100"></progress></p>
                 </div>
-                -->
+    
                 <div class="skill-information">
                     <p width="70px"><img src="images/android.png" alt=""></p>
                     <p class="skill-name">Android Studio</p>
@@ -219,5 +222,6 @@
             </p>
         </section>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
