--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
         <section id="about-section">
             <h1 class="section-heading">About me</h1>
             <div class="about-container container-fluid">
-                <div class="row">
-                    <div class="message my-image col-sm-6">
+                <div class="row justify-content-center">
+                    <div class="message my-image col-sm-12">
                         <img src="https://cdn.pixabay.com/photo/2016/09/08/04/12/programmer-1653351_1280.png" alt="">
                     </div>
-                    <div class="message my-information col-sm-6">
+                    <div class="message my-information col-sm-12">
                         <p>I am Mateusz.</p>
                         <p>I am programmer and tech enthusiast</p>
                         <p>I started learning programming two years ago. Currently I'm studying Computer Science (field: programming) going to be on 5th semester. 
