fast-pizza and redux added

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
             <p class="skill-name">SQL (T-SQL)</p>
             <p><progress value="90" max="100"></progress></p>
           </div>
+          <hr />
           <div class="skill-information">
             <p width="70px"><img src="images/html.png" alt="" /></p>
             <!--<p><i class="fab fa-html5 fa-3x"></i></p>-->
@@ -122,21 +123,42 @@
           </div>
 
           <div class="skill-information">
-            <p><i class="fab fa-react fa-3x"></i></p>
+            <p width="70px"><img src="images/React.png" alt="" /></p>
+            <!--<p><i class="fab fa-react fa-3x"></i></p>-->
             <p class="skill-name">React</p>
             <p><progress value="65" max="100"></progress></p>
           </div>
+
           <div class="skill-information">
-            <p><i class="fab fa-bootstrap fa-3x"></i></p>
-            <p class="skill-name">Bootstrap</p>
+            <p width="70px" height="70px">
+              <img src="images/redux.png" alt="" />
+            </p>
+            <!--<p><i class="fab fa-react fa-3x"></i></p>-->
+            <p class="skill-name">Redux</p>
+            <p><progress value="50" max="100"></progress></p>
+          </div>
+          <div class="skill-information">
+            <p width="70px" height="70px">
+              <img src="images/Bootstrap.png" alt="" />
+            </p>
+            <p class="skill-name p-1">Bootstrap</p>
+            <p><progress value="45" max="100"></progress></p>
+          </div>
+          <div class="skill-information">
+            <p width="70px"><img src="images/Tailwind.png" alt="" /></p>
+            <!--<p><i class="fab fa-bootstrap fa-3x"></i></p>-->
+            <p class="skill-name p-2">Tailwind</p>
             <p><progress value="45" max="100"></progress></p>
           </div>
 
-          <div class="skill-information">
-            <p width="70px"><img src="images/android.png" alt="" /></p>
+          <!-- <div class="skill-information">
+            <p width="70px">
+              <img src="images/android.png" alt="" />
+            </p>
             <p class="skill-name">Android Studio</p>
             <p><progress value="20" max="100"></progress></p>
-          </div>
+          </div> -->
+          <hr />
           <div class="skill-information">
             <p width="70px"><img src="images/intellij.png" alt="" /></p>
             <p class="skill-name">IntelliJ</p>
@@ -239,6 +261,12 @@
             </a>
           </div>
           <div class="image-box">
+            <a href="https://github.com/MatthieuJBM/fast-pizza.git">
+              <img src="images/fast-react-pizza.png" alt="" />
+              <div>Fast Pizza App</div>
+            </a>
+          </div>
+          <div class="image-box">
             <a href="https://github.com/MatthieuJBM/moviesList">
               <img src="images/movielist.png" alt="" />
               <div>Movie List App</div>
@@ -261,7 +289,7 @@
               href="https://github.com/MatthieuJBM/splitting-the-bill-learning"
             >
               <img src="images/splitbill.png" alt="" />
-              <div>Split Bill App</div>
+              <div class="mt-5">Split Bill App</div>
             </a>
           </div>
         </div>
